2012-06-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Patch ArgDictTools to print setup info and packages from $TestArea
    * Cosmetic improvements to ArgDictTools.py
    * Tagging as PATJobTransforms-00-04-16

2012-05-31 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Fix for hybrid merger (MergePoolJobTransform) to work correctly
      with old mergePOOL.exe, which always has rc=1
    * Remove misleading log message from Merging_trf
    * Tagging as PATJobTransforms-00-04-15
    
2012-05-18 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Apply quotes around the 'echo' of the trf command in ArgDictTools, ensuring that 
      the command can be copied and pasted properly.
    * Ditto for commands produced by GetCommand.py
    * Tagging as PATJobTransforms-00-04-14

2012-05-09  Junji Tojo <Junji.Tojo@cern.ch>
    * Added NTUP_BTAGSLIM, NTUP_BTAGEFF, NTUP_BTAGFULL in Reco_trf.py and MergeNTUP_trf.py
    * Tagging as PATJobTransforms-00-04-13

2012-05-08 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Enable v0finder in AOD->DPD skeleton if NTUP_TOP* is being produced
    * Tagging as PATJobTransforms-00-04-12

2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add rdo2rdotrig substep for input/outputRDOFile to allow RDO->RDOTrigger (Configuration.py)
    * New AddRDOTrigger argument for transform steering (Configuration.py)
    * Tagging as PATJobTransforms-00-04-11

2012-04-26  Junji Tojo <Junji.Tojo@cern.ch>
        * Added DAOD_ZEEGAMMA and DAOD_ZMUMUGAMMA in Reco_trf.py
        * Tagging as PATJobTransforms-00-04-10

2012-04-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputD2AODM_TOPFJETFile as to Reco_trf ListOfDefaultPositionalKeys
    * Tagging as PATJobTransforms-00-04-09

2012-04-20  Junji Tojo <Junji.Tojo@cern.ch>
        * Added NTUP_WPRIMEEN and NTUP_WPRIMEMN in Reco_trf.py and MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-08
