@@ -1,3 +1,7 @@
+2012-06-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Fix for hybrid POOL merger to get correct GUID for merged files and add it to the PFC (MergePool_trf.py)
+    * Tagging as PATJobTransforms-00-04-17    
+
 2012-06-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Patch ArgDictTools to print setup info and packages from $TestArea
     * Cosmetic improvements to ArgDictTools.py
